--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist -b gh-pages-new"
   },
   "dependencies": {
+    "@google/genai": "^0.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
