--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "deploy": "gh-pages -d dist -b gh-pages-new"
   },
   "dependencies": {
-    "@google/genai": "^0.1.0",
+    "openai": "^4.28.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@google/genai": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
