feat(chatbot): Enforce API key from process.env
Refactors the ChatBot component to strictly use `process.env.API_KEY` for Google Gemini API key retrieval, aligning with deployment guidelines and improving security.

Adds necessary type declarations for `@google/genai` and `openai` to `vite-env.d.ts` to resolve module resolution issues.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "**/*.ts", "**/*.tsx"],
+  "include": ["src", "**/*.ts", "**/*.tsx", "vite-env.d.ts"],
   "exclude": ["vite.config.ts", "tsconfig.node.json"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
