chore: update dependencies and enable auto theme switch
- Enable auto theme switching by default
- Update @google/genai to latest version and add @types/node
- Reorder dependencies for consistency

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "deploy": "gh-pages -d dist -b gh-pages-new"
   },
   "dependencies": {
-    "openai": "^4.28.0",
+    "@google/genai": "^1.30.0",
     "lucide-react": "^0.344.0",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "^0.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
